Make sure to run post init tasks even if kSkipGpuDataLoading is set

Fixes regression introduced by https://codereview.chromium.org/1547793004/
which postpones call to GpuDataManagerImplPrivate::SetGLStrings() and
GpuDataManagerImplPrivate::DisableHardwareAcceleration() until
GpuDataManagerImplPrivate::Initialize() is called.

A solution is to call RunPostInitTasks() for any early return in
GpuDataManagerImplPrivate::Initialize().

R=zmo@chromium.org

BUG=592435

TEST=content_shell --no-sandbox --disable-gpu --skip-gpu-data-loading chrome:gpu

Review URL: https://codereview.chromium.org/1773073003

Cr-Commit-Position: refs/heads/master@{#380207}

Former-commit-id: 67487fb9f97e4835d80fe1baa084a3cb97df7784